--- a/Streaming/TuneBib.bib
+++ b/Streaming/TuneBib.bib
@@ -24,7 +24,7 @@
 @string{IEEEJSAC = "IEEE J. Selected Areas in Communications"}
 @string{IEEETON = "IEEE/ACM Trans. Networking"}
 @string{IEEETCOM = "IEEE Trans. Communications"}
-@string{IEEETT = "IEEE Trans. Info. Theory"}
+@string{IEEETOIT = "IEEE Trans. Info. Theory"}
 @string{INTERNETWORK = "Journal of Internetworking: Research and Experience"}
 @string{IJDACS = "International Journal on Digital and Analog Communication Systems"}
 @string{IJCS = "International Journal on Communication Systems"}
@@ -1658,4 +1658,31 @@ Mentions that could use delay variance to infer topology (like do in loss work)}
 	year = {2012},
 	location = {London, England, UK},
 	pages = {125--136}
+}
+
+@article{Zamir98DPI,
+    author = {Ram Zamir},
+    title = {A Proof of the {F}isher Information Inequality via a Data Processing Argument},
+    journal = IEEETOIT,
+    volume = {44},
+    number = {3},
+    pages = {1246--1250},
+    month = MAY,
+    year = {1998},
+    abstract = {Mainly focuses on Fisher information with a translation parameter for
+	a linear model. In particular, it looks at different kinds of noise and how that
+	affects estimation.}
+}
+
+@article{Gorman90CRB,
+    author = {John D. Gorman and Alfred O. Hero},
+    title = {Lower Bounds for Parametric Estimation with Constraints},
+    journal = IEEETOIT,
+    volume = {36},
+    number = {6},
+    pages = {1285--1301},
+    month = NOV,
+    year = {1990},
+    abstract = {Shows how Cram\'er-Rao lower bound is affected by the constraints on 	
+	the estimated parameters}
 }
