--- a/Streaming/TuneBib.bib
+++ b/Streaming/TuneBib.bib
@@ -1686,3 +1686,13 @@ Mentions that could use delay variance to infer topology (like do in loss work)}
     abstract = {Shows how Cram\'er-Rao lower bound is affected by the constraints on 	
 	the estimated parameters}
 }
+
+@inproceedings{Zhao05TM,
+    	author = {Qi Zhao and Abhishek Kumar and Jia Wang and Jun Xu},
+    	title = {Data streaming algorithms for accurate and efficient measurement of traffic and flow matrices},
+    	booktitle = {SIGMETRICS},
+	month = JUN,
+    	year = {2005},
+	location = {Banff, Alberta, Canada},
+	pages = {350--361}
+}
